--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <title>英潮</title>
   </head>
-  <body>
+  <body style="margin:0">
     <div id="game" width="100%" height="100%"></div>
     <script src="/static/bundle.js"></script>
   </body>
