add get random request for clear cache

--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-    <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>    
+    <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <title>英潮</title>
   </head>
   <body style="margin:0">
     <div id="game" width="100%" height="100%"></div>
-    <script src="/static/bundle.js"></script>
+    <script type="text/javascript">
+      var time = new Date().toString();
+      var body = document.getElementsByTagName('body')[0];
+      var bundleScript = document.createElement('script');
+      bundleScript.type = 'text/javascript';
+      bundleScript.src='/static/bundle.js?t=' + time;
+      body.appendChild(bundleScript);      
+    </script>
   </body>
 </html>
