fix bugs in web pack

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       var body = document.getElementsByTagName('body')[0];
       var bundleScript = document.createElement('script');
       bundleScript.type = 'text/javascript';
-      bundleScript.src='/static/bundle.js?t=' + time;
+      bundleScript.src='dist/static/bundle.js?t=' + time;
       body.appendChild(bundleScript);      
     </script>
   </body>
