fix bugs and add scale

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   </head>
   <body style="margin:0">
     <div id="game" width="100%" height="100%"></div>
-    <script type="text/javascript">
+    <script src="/static/bundle.js"></script>
+    <!--<script type="text/javascript">
       var time = new Date().toString();
       var body = document.getElementsByTagName('body')[0];
       var bundleScript = document.createElement('script');
       bundleScript.type = 'text/javascript';
-      bundleScript.src='dist/static/bundle.js?t=' + time;
+      bundleScript.src='/static/bundle.js';
       body.appendChild(bundleScript);      
-    </script>
+    </script>-->
   </body>
 </html>
